move inline svg of footer into 3 partials (one for each svg)  | fix styles of footer on mobile

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -189,16 +189,26 @@ html {
 }
 .footer {
   position: absolute;
-  bottom:0;
-
+  box-sizing:border-box;
   width: 100%;
   background-color: #f5f5f5;
   left: 0;
+  bottom:0;
   background:#222;
   color:#999999;
   a { color: #999999;}
   p {margin-top: 2em;}
-  figure{display: inline-block; padding: 0.5em; text-align: center; margin: 0 auto;}
+  figure{
+    box-sizing: border-box;
+    display: inline-block;
+    padding: 0.5em;
+    text-align: center;
+    margin: 0 auto;
+    svg{
+      box-sizing:border-box;
+      width:100%;
+    }
+  }
 }
 #footer-clear{
 
